2010-03-29  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] unit tests don't compile inside of Qt

        https://bugs.webkit.org/show_bug.cgi?id=36756

        * tests/tests.pri: Don't do the target substitution inside Qt and find the sources
        through VPATH instead of relying on the location of the .pro file exclusively.

2010-03-26  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Antti Koivisto.

        Change due to renaming of frame flattening setting.

        * Api/qwebpage.cpp:
        (qt_drt_setFrameFlatteningEnabled):
        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        * symbian/eabi/QtWebKitu.def:

2010-03-28  Alexey Proskuryakov  <ap@apple.com>

        Build fix. Include WindowsKeyboardCodes.h instead of KeyboardCodes.h.

        * WebCoreSupport/EditorClientQt.cpp:

2010-03-26  Olivier Goffart  <ogoffart@trolltech.com>

        Reviewed by Simon Hausmann.

        [Qt] Compile with QT_USE_FAST_OPERATOR_PLUS

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::populateSetting):
        (WebCore::InspectorClientQt::storeSetting):

2010-03-26  David Boddie  <dboddie@trolltech.com>

        Reviewed by Simon Hausmann.

        [Qt] Doc: Simplified Commercial Editions for Qt 4.7.

        * docs/qtwebkit.qdoc:

2010-03-26  Simon Hausmann  <simon.hausmann@nokia.com>

        Symbian build fix.

        [Qt] Updated the def file with new exports used by QtLauncher.

        * symbian/eabi/QtWebKitu.def:

2010-03-25  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtLauncher crashes on Mac OS and Linux when exiting with QGraphicsView mode enabled
        https://bugs.webkit.org/show_bug.cgi?id=35251

        Followed the way QWebView registers for the signal QWebPage::destroyed(), to prevent
        QGraphicsWebView from referencing QWebPage after it was deleted.        
